# CSV_AI_Proc

./: .env_example  .gitignore  ARCHITECTURE.md  HANDOVER.md  README.md  docker-compose.yml  main.py  pyproject.toml  regras_de_negocio.txt  regras_de_negocio_original.txt  requirements.txt  run_api.py  start.sh
app/: __init__.py  main.py
app/core/: config.py
app/models/: csv_models.py
app/services/: ai_agent.py  csv_processor.py  email_monitor.py
docker/: Dockerfile
examples/input/: Carga CMNS.csv  Carga CMNS2.csv
examples/output/: output.csv
prompts/: prompt_enriquecimento_produtos.txt  prompt_universal.txt
scripts/: test_api.py
